tests/rosetta/out/Haskell/ackermann-function.error
run error: exit status 1

/workspace/mochi/tests/rosetta/out/Haskell/ackermann-function.hs:18:1: error:
    Multiple declarations of ‘main’
    Declared at: /workspace/mochi/tests/rosetta/out/Haskell/ackermann-function.hs:14:1
                 /workspace/mochi/tests/rosetta/out/Haskell/ackermann-function.hs:18:1
   |
18 | main = do
   | ^^^^
